--- a/index.html
+++ b/index.html
@@ -58,15 +58,53 @@
     </nav>
     </div> <!--fim div menu--> 
 
-    <div>
+    <div class="secao-hero">
     <h2>Black Friday Antecipado</h2>
     <p>Até 50% de desconto em produtos selecionados</p>
     </div> <!--fim div black friday-->
 
+    <div class="produtos">
+
+    <div class="produtos-container">
+
+
+    <div class="cartao-produto">
+    <img src="https://images.unsplash.com/photo-1695048133142-1a20484d2569?w=400">
+    <div class="info-produto">
+    <h3 class="nome-produto">Iphone 16 Pro Max</h3>
+    <p class="descricao-produto">Iphone 16 com câmera profissional </p>
+    <p class="preco-produto">10.000</p>
+    <button class="botao-produto">Ver Mais</button>
+
+    </div> <!--fim div info-produto 1-->
+
+    </div> <!--fim div cartao-produto 1-->
+
+     <div class="cartao-produto">
+    <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?w=400">
+    <div class="info-produto">
+    <h3 class="nome-produto">Iphone 16 Pro Max</h3>
+    <p class="descricao-produto">Iphone 16 com câmera profissional </p>
+    <p class="preco-produto">10.000</p>
+    <button class="botao-produto">Ver Mais</button>
+
+    </div> <!--fim div info-produto 2-->
+
+    </div> <!--fim div cartao-produto 2-->
+
+
+
+
+
+
+    </div> <!--fim div produtos-container-->
+
+    </div> <!--fim div produtos -->
+
     <footer>
-    <p>2025 - Todos os direitos reservados</p>
+    <p>2025 - TechStore - Todos os direitos reservados</p>
     </footer> <!--fim footer-rodape-->
 
-    
+    <script src="JS/script.js"></script>
 </body>
 </html>
